restructure application to minimic a primitive Client Server structure. Adjusted code  in program, appdbcontext and entities

--- a/SQLiteDemosSolution/SQLiteDemos/SQLiteDemos.csproj
+++ b/SQLiteDemosSolution/SQLiteDemos/SQLiteDemos.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SQLiteDemos.System\SQLiteDemos.System.csproj" />
+  </ItemGroup>
+
 </Project>
